number conversion fix. FINISHED?